--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -319,7 +319,7 @@
         <div class="nav-up"><a href="#devices">&#9650;</a></div>
         <div class="nav-down"><a href="#domrect">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td><button class="btn8" id="canvasRun" onClick="runCanvas(`rerun`)">re-run tests</button>
+    <tr><td><button class="btn8" onClick="runCanvas(`rerun`)">re-run tests</button>
       &nbsp getContext</td><td class="getContext"></td></tr>
     <tr><td>toDataURL</td><td class="toDataURL"></td></tr>
     <tr><td>toBlob</td><td class="toBlob"></td></tr>
