--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -294,6 +294,7 @@
   </table>
 
   <!-- TABLE 7: Devices & Hardware - devices.js -->
+  <div class="hidden"><span id="sColorElement"></span></div>
   <table id="tb7">
     <col width="50%"><a name="devices"></a><col width="50%">
     <thead><tr><th colspan="2">
@@ -321,6 +322,7 @@
       <span class="tooltiptextbig">media.webspeech.synth.enabled</span></div>
       &nbsp speech synthesis</td><td id="speechSynth"></td></tr>
     <tr><td>speech engines</td><td id="speechEngines"></td></tr>
+    <tr><td>system colors</td><td class="mono" id="sColorHash"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">i</span>
       <span class="tooltiptext">dom.vr.enabled</span></div>
       &nbsp [api] webvr</td><td id="nGetVR"></td></tr>
