--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -199,7 +199,7 @@
         <div class="nav-down"><a href="#headers">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td><div>
-        <div class="btn-left"><button class="btn4" onClick="runLanguage(`rerun`)">re-run tests</button></div>
+        <div class="btn-left"><button class="btn4" onClick="outputSection(`language`)">re-run tests</button></div>
         <div>[header] http_accept_language</div></div></td>
       <td></td></tr>
     <tr><td>[navigator] languages</td><td id="nLanguages"></td></tr>
@@ -303,7 +303,7 @@
         <div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td><div>
-        <div class="btn-left"><button class="btn7" onClick="runDevices(`rerun`)">re-run tests</button>
+        <div class="btn-left"><button class="btn7" onClick="outputSection(`devices`)">re-run tests</button>
         &nbsp <div class="tooltip"><span class="icon">i</span>
         <span class="tooltiptext">if toggling prefs, most<br>of these require a<br>a page refresh (<b>F5</b>)</span></div>
         </div>
@@ -478,7 +478,7 @@
         <div class="nav-down"><a href="#media">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td><div>
-        <div class="btn-left"><button class="btn11" onClick="runAudio(`rerun`)">re-run tests</button></div>
+        <div class="btn-left"><button class="btn11" onClick="outputSection(`audio`)">re-run tests</button></div>
         <div><div class="tooltip"><span class="icon">i</span>
           <span class="tooltiptext">dom.webaudio.enabled</span></div> &nbsp [api] web audio</div></div></td>
       <td id="audioSupport"></td>
