--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -444,7 +444,7 @@
       May be unsuitable on Android [e.g. limted fonts to detect, slow script prompts].</span>
     </td></tr>
     <tr><td colspan="4"><div>
-        <div class="btn-left"><button class="btn10" id="fontRun" onClick="runFont()">run tests</button></div>
+        <div class="btn-left"><button class="btn10" id="fontRun" onClick="outputSection(`fonts`)">run tests</button></div>
         <div>enumerate fonts <sup>1</sup></div></div></td>
       <td colspan="5" class="mono" id="fontFB"></td>
     </tr>
