--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -601,6 +601,19 @@
       <span class="tooltiptextbig">dom.IntersectionObserver.enabled</span></div>
       &nbsp [api] intersection observer</td><td id="intObserver"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">mathml.disabled</span></div>
+      &nbsp mathml</td><td id="mathml1"></td>
+    </tr>
+    <tr><td>[test example] mathml</td><td id="mathml2">
+        <math>
+        <mrow><mi>x</mi><mo>=</mo><mfrac><mrow><mo form="prefix">&minus;</mo><mi>b</mi>
+        <mo>&PlusMinus;</mo><msqrt><msup><mi>b</mi><mn>2</mn></msup><mo>&minus;</mo><mn>4</mn>
+        <mo>&InvisibleTimes;</mo><mi>a</mi><mo>&InvisibleTimes;</mo><mi>c</mi></msqrt></mrow>
+        <mrow><mn>2</mn><mo>&InvisibleTimes;</mo><mi>a</mi></mrow></mfrac></mrow>
+        </math>
+      </td>
+    </tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
       <span class="tooltiptextbig">dom.requestIdleCallback.enabled</span></div>
       &nbsp requestIdleCallback</td><td id="reqIdleCB"></td></tr>
   </table>
