--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -302,6 +302,7 @@
   <!-- TABLE 7: Devices & Hardware - devices.js -->
   <div class="hidden"><span id="sColorElement"></span></div>
   <div class="themed" id="pColorElement"></div>
+  <div class="motion" id="pMotionElement"></div>
   <table id="tb7">
     <col width="50%"><a name="devices"></a><col width="50%">
     <thead><tr><th colspan="2">
@@ -331,6 +332,7 @@
     <tr><td>speech engines</td><td id="speechEngines"></td></tr>
     <tr><td>system colors</td><td class="mono" id="sColorHash"></td></tr>
     <tr><td>prefers-color-scheme</td><td id="pColorScheme"></td></tr>
+    <tr><td>prefers-reduced-motion</td><td id="pReducedMotion"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
       <span class="tooltiptext">dom.vr.enabled</span></div>
       &nbsp [api] webvr</td><td id="nGetVR"></td></tr>
