--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -143,8 +143,8 @@
       &nbsp [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
     <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
-    <tr><td>[hash] widget properties</td><td id="widgetH" class="mono"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
+    <tr><td>[widgets] os</td><td id="widgetOS"></td></tr>
     <tr><td colspan="2" class="showhide">
         <input id="collapseE" class="toggle" type="checkbox" checked onchange="toggleitems(this, `E`)">
         <label for="collapseE" class="lbl-toggle" id="labelE">&#9660; show details</label>
@@ -157,19 +157,18 @@
       <tr class="togE"><td>error4</td><td id="err4"></td></tr>
       <tr class="togE"><td>error5</td><td id="err5"></td></tr>
       <tr class="togE"><td>error6</td><td id="err6"></td></tr>
-    <tr class="togE"><td></td><td class="sub2">widgets & elements</td></tr>
-      <tr class="togE"><td>checkbox</td><td id="wid1"></td></tr>
-      <tr class="togE"><td>radio</td><td id="wid2"></td></tr>
-      <tr class="togE"><td>button</td><td id="wid3"></td></tr>
-      <tr class="togE"><td>progress bar</td><td id="wid4"></td></tr>
-      <tr class="togE"><td>color</td><td id="wid5"></td></tr>
-      <tr class="togE"><td>combobox</td><td id="wid6"></td></tr>
-      <tr class="togE"><td>text</td><td id="wid7"></td></tr>
+    <tr class="togE"><td></td><td class="sub2">widgets</td></tr>
+      <tr class="togE"><td>hash</td><td class="mono" id="widgetH"></td></tr>
+      <tr class="togE"><td id="widfirst">button, checkbox, color, combobox, datetime-local, radio, text</td>
+        <td  style="white-space: pre;" id="wid1"></td></tr>
+      <tr class="hidden"><td>radio</td><td id="wid2"></td></tr>
+      <tr class="hidden"><td>button</td><td id="wid3"></td></tr>
+      <tr class="hidden"><td>combobox</td><td id="wid4"></td></tr>
+      <tr class="hidden"><td>text</td><td id="wid5"></td></tr>
+      <tr class="hidden"><td>datetime-local</td><td id="wid6"></td></tr>
+      <tr class="hidden"><td>color</td><td id="wid7"></td></tr>
       <tr class="togE"><td>datetime</td><td id="wid8"></td></tr>
-      <tr class="togE"><td>datetime-local</td><td id="wid9"></td></tr>
-      <tr class="togE"><td>textarea</td><td id="wid10"></td></tr>
-      <tr class="togE"><td>iframe</td><td id="wid11"></td></tr>
-      <tr class="togE"><td>image</td><td id="wid12"></td></tr>
+      <tr class="togE"><td>textarea</td><td id="wid9"></td></tr>
       <tr class="togE"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
