--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -159,7 +159,7 @@
       <tr class="togE"><td>error6</td><td id="err6"></td></tr>
     <tr class="togE"><td></td><td class="sub2">widgets</td></tr>
       <tr class="togE"><td>hash</td><td class="mono" id="widgetH"></td></tr>
-      <tr class="togE"><td id="widfirst">button, checkbox, color, combobox, datetime-local, radio, text</td>
+      <tr class="togE"><td id="widfirst">button|checkbox|color|combobox|datetime-local|radio|text</td>
         <td  style="white-space: pre;" id="wid1"></td></tr>
       <tr class="hidden"><td>radio</td><td id="wid2"></td></tr>
       <tr class="hidden"><td>button</td><td id="wid3"></td></tr>
@@ -484,7 +484,7 @@
         <label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
     </td></tr>
     <tr class="togF"><td></td><td colspan="8" class="sub10">enumerate fonts &nbsp
-       <button class="btn10" onClick="copyclip(`fontFBFound`)">copy to clipboard</button></td></tr>
+       <button class="btn0" onClick="copyclip(`fontFBFound`)">[ copy to clipboard ]</button></td></tr>
     <tr class="togF"><td></td><td colspan="8" class="intro" id="fontFBFound"></td></tr>
     <tr class="togF"><td colspan="9"></td></tr>
     <tr><td colspan="9"><span class="no_color">code based on work by </span>
