--- a/extra.html
+++ b/extra.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  <title>TorZillaPrint: chrome://</title>
+  <title>TorZillaPrint: Additional Tests</title>
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <script src="js/generic.js"></script>
   <script src="js/globals.js"></script>
