--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -76,8 +76,8 @@
       <span class="tooltiptext">might break<br> with HiDPI</span></div>
       &nbsp zoom %</td><td id="jsZoom"></td></tr>
     <tr><td>devicePixelRatio</td><td id="DevPR"></td></tr>
-    <tr><td>[scrollY] devicePixelRatio <sup>4</sup></td><td id="DevPRscrollY"></td></tr>
-    <tr><td>[clientRect] devicePixelRatio <sup>4</sup></td><td id="DevPRclientRect"></td></tr>
+    <tr><td>[scrollY] devicePixelRatio <sup>4</sup></td><td id="devPRscrollY"></td></tr>
+    <tr><td>[clientRect] devicePixelRatio <sup>4</sup></td><td id="devPRclientRect"></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a>
       <span class="no_color">,</span>
